--- a/question3/src/app/app.component.html
+++ b/question3/src/app/app.component.html
@@ -6,39 +6,59 @@
 
 <h1>Formulaire qui sert à rien</h1>
 <mat-card style="width: 700px; margin: auto; padding: 20px;">
-  <form >
+  <!--Ajouter le formGroup-->
+  <form [formGroup]="formGroup">
 
     <mat-form-field style="width: 100%">
-        <mat-label>Nom</mat-label>
-        <input matInput type="text" placeholder="Nom et prénom" name="name" >
-        
+      <mat-label>Nom</mat-label>
+      <!--Ne pas oublier formControllerName lié avec nom dans le .ts-->
+      <input matInput type="text" placeholder="Nom et prénom" name="name" formControlName="nom">
+      <!--Mettre le bon nom dans .get et la même erreur que celui que j'ai mis dans le .ts-->
+      @if(formGroup.get('nom')?.hasError('required')) {
+      <mat-error> Votre nom est <strong>requis</strong> </mat-error>
+      }
     </mat-form-field>
 
     <mat-form-field style="width: 100%">
       <mat-label>Numéro de rue</mat-label>
-      <input matInput type="number" placeholder="5230" name="roadnumber">
-      
+      <input matInput type="number" placeholder="5230" name="roadnumber" formControlName="numRue">
+      @if(formGroup.get('numRue')?.hasError('required')) {
+      <mat-error> Votre numéro de rue est <strong>requis</strong> </mat-error>
+      }
+      <!--Utiliser "||" quand j'ai plusieurs validations-->
+      @if(formGroup.get('numRue')?.hasError('min') || formGroup.get('numRue')?.hasError('max')) {
+      <mat-error> Numéro doit être compris entre 1000 et 9999 </mat-error>
+      }
     </mat-form-field>
 
     <mat-form-field style="width: 100%">
-        <mat-label>Rue</mat-label>
-        <input matInput type="text" placeholder="Resther" name="rue">
+      <mat-label>Rue</mat-label>
+      <input matInput type="text" placeholder="Resther" name="rue">
     </mat-form-field>
 
     <mat-form-field style="width: 100%">
       <mat-label>Code Postal</mat-label>
-      <input matInput type="text" placeholder="H2J8B2" name="postalcode">
-      
+      <input matInput type="text" placeholder="H2J8B2" name="postalcode" formControlName="codePostal">
+      @if(formGroup.get('codePostal')?.hasError('pattern')) {
+      <mat-error> Le code postal n'est pas au bon format </mat-error>
+      }
     </mat-form-field>
 
     <mat-form-field style="width: 100%">
       <mat-label>Commentaire</mat-label>
-      <textarea matInput placeholder="Votre commentaire" name="comments"></textarea>
-      
+      <textarea matInput placeholder="Votre commentaire" name="comments" formControlName="commentaire"></textarea>
+      <!--hasError doit avoir le même non que le validator dans le .ts mais sans majuscules-->
+      @if(formGroup.get('commentaire')?.hasError('minlength')) {
+      <mat-error> Doit avoir minimum 10 caractères </mat-error>
+      }
+      @if(formGroup.hasError('nomDansComment')) {
+      <mat-error> Le nom ne doit pas être présent dans le commentaire </mat-error>
+      }
+
     </mat-form-field>
 
     <mat-card-actions align="end">
-      <button  mat-raised-button color="primary" >Acheter</button>
+      <button mat-raised-button [disabled]="!formGroup.valid" color="primary">Acheter</button>
     </mat-card-actions>
   </form>
 </mat-card>
